--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,106 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+/* Responsive design styling  */
+
+@media (max-width: 500px) {
+    a {
+        margin: 0 5%;
+        font-size: 1.5rem;
+    }
+    nav span{
+        border-left: 1px solid #626262;
+        height: 90%;
+    }
+    .title-container div {
+        width: 100%;
+        height: 30vh;
+        background-size: cover;
+        background-position-x: 50%;
+        background-position-y: 10%;
+        margin-bottom: 2%;
+    }
+    h1 {
+        font-size: 3.5rem;
+        font-weight: 700;
+    }
+    button{
+        padding:1% 5 %;
+        font-size: 1.2rem;
+        border-radius:3px;
+        border:1px solid #626262;
+        box-shadow: 1px 1px 1px #626262;
+    }
+    button:hover{
+        border:1px solid white;
+    }
+    .title-container hr {
+        width: 100%;
+    }
+    .artists-container {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .artist {
+        width: 70%;
+    }
+    .artist img {
+        width: 70%;
+        height: 20vh;
+        margin-bottom: 4%;
+    }
+    .artist .bio {
+        width: 100%;
+        font-size: 1rem;
+        margin: 4% 0 8% 0;
+    }
+    .artist a {
+        font-size: 1.75rem;
+    }
+
+/* Artists Section Styles
+.artists-container{
+    display:flex;
+    justify-content: space-around;
+    width:80%;
+    margin:0 auto;
+}
+
+.artist{
+    width:40%;
+    text-align:center;
+}
+.artist img{
+    width:100%;
+} */
+
+
+/* .title-container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.title-container div {	
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
+    background-position: center;	
+    color: white;	
+    width:80%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height:60vh;
+    margin:5% 0;
+}	
+.title-container div:hover {	
+    opacity: 80%;	
+}	
+.title-container hr{
+    width:80%;
+} */
+
+}
+
+
