--- a/css/index.css
+++ b/css/index.css
@@ -146,12 +146,11 @@ button:hover{
         border-left: 1px solid #626262;
         height: 90%;
     }
+    /* Main image title section  */
     .title-container div {
         width: 100%;
-        height: 30vh;
-        background-size: cover;
-        background-position-x: 50%;
-        background-position-y: 10%;
+        height: 50vh;
+        background-position: center;
         margin-bottom: 2%;
     }
     h1 {
@@ -176,6 +175,7 @@ button:hover{
         flex-direction: column;
         align-items: center;
     }
+    /* artists section  */
     .artist {
         width: 70%;
     }
@@ -192,48 +192,6 @@ button:hover{
     .artist a {
         font-size: 1.75rem;
     }
-
-/* Artists Section Styles
-.artists-container{
-    display:flex;
-    justify-content: space-around;
-    width:80%;
-    margin:0 auto;
-}
-
-.artist{
-    width:40%;
-    text-align:center;
-}
-.artist img{
-    width:100%;
-} */
-
-
-/* .title-container{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.title-container div {	
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
-    background-position: center;	
-    color: white;	
-    width:80%;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height:60vh;
-    margin:5% 0;
-}	
-.title-container div:hover {	
-    opacity: 80%;	
-}	
-.title-container hr{
-    width:80%;
-} */
-
 }
 
 
